# django-recruitment-ffg

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  scripts.py
.github/workflows/: pytest.yml
.history/: .gitignore_20230416100953  .gitignore_20230416101029  .gitignore_20230416101033  config_20230416083515.json  config_20230416083524.json  config_20230416083744.json  config_20230416083754.json  config_20230416084416.json  config_20230416094952.json  pyproject_20230416085119.toml  pyproject_20230416100719.toml  setup_20230415222051.cfg  setup_20230415222055.cfg  setup_20230415222059.cfg  setup_20230415222118.cfg
.history/config/gunicorn/: conf_20230415222421.py
.history/src/api/: serializers_20230416090601.py  urls_20230416085801.py  urls_20230416085803.py  views_20230416090723.py  views_20230416100108.py  views_20230416100139.py
.history/src/image_app/: settings_20230415221949.py  settings_20230416082602.py  settings_20230416082607.py  settings_20230416082800.py  settings_20230416082918.py  settings_20230416083101.py  settings_20230416083104.py  settings_20230416083130.py  settings_20230416083137.py  settings_20230416083154.py  settings_20230416083157.py  settings_20230416083204.py  settings_20230416083321.py  (+26 more)
api/: pagination.py  serializers.py  views.py
api/tests/: test_image_viewset.py
image_app/: settings.py
images/: models.py
images/tests/: test_resize_method.py
src/api/: serializers.py  urls.py  views.py
src/image_app/: settings.py  storage_backends.py  urls.py
src/images/: models.py
(+21 files in other folders)
